--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     kek
 
-    <script src="./1-Basics/5-removeN.js"></script>
+    <script src="./temporary.js"></script>
   </body>
 </html>
