--- a/6-DOM/3-index.html
+++ b/6-DOM/3-index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./2-query.js"></script>
+    <script defer src="./3-select.js"></script>
   </head>
   <body>
-    <div id="wrapper">
-      <input class="test1" value="OFF" readonly />
-      <button class="test2">Click Me</button>
-    </div>
+    <ul id="list">
+      <li>OFF</li>
+      <li>OFF</li>
+      <li>OFF</li>
+      <li>OFF</li>
+      <li>OFF</li>
+      <li>OFF</li>
+    </ul>
   </body>
 </html>
